--- a/hooks-context/use-json-fetch/src/index.css
+++ b/hooks-context/use-json-fetch/src/index.css
@@ -1,13 +1,28 @@
 body {
+  padding-top: 50px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 5px;
+}
+
+.wrapper {
+  width: 400px;
+  margin: 0 auto;
 }
